--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 img {
     position: absolute;
+    width: 50px;
+    height: 50px;
 }
 
 div {
@@ -10,7 +12,7 @@ div {
 
 #rightside {
 
-    left: 500px;
+    left: 700px;
     border-left: 1px solid black;
 }
 
